1.5/back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  labels:
    app: back
spec:
  replicas: 3

  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: back-svc
spec:
  selector:
    app: back
  ports:
    - name: multitool
      protocol: TCP
      port: 9002
      targetPort: 8080
